# NeuroSleepNet

./: .env.example  .gitignore  Dockerfile  Makefile  NeuroSleepNet_VibePlan.md  PLAN.md  README.md  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml  neurosleep_memory.db  neurosleepnet_postman_collection.json  plan.md  pyproject.toml  quickstart.py  requirements.txt  test_neurosleepnet.py
api/: main.py  routes.py
backend/: Dockerfile  Dockerfile.prod  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9cc10407f5a1_initial.py
backend/app/: config.py  deps.py  main.py
backend/app/api/v1/: auth.py  billing.py  dashboard.py  memories.py  router.py  search.py  sleep.py  tasks.py
backend/app/core/: attention.py  consolidation.py  embeddings.py  residual.py  sleep_engine.py
backend/app/middleware/: audit_log.py  plan_check.py  rate_limit.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  memory.py  task.py  usage_log.py  user.py
backend/app/schemas/: auth.py  billing.py  dashboard.py  memory.py
backend/app/services/: billing_service.py  embedding_service.py  memory_service.py  usage_service.py
backend/app/utils/: crypto.py  errors.py  pagination.py
backend/app/workers/: celery_app.py  tasks.py
benchmarks/: datasets.py  memory_eval.py  metrics.py  split_mnist.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.jsx  index.css
dashboard/src/components/: BenchmarkSection.tsx  CodeSection.tsx  Footer.tsx  MemoryHealth.jsx  Navbar.tsx  ProblemSection.tsx  TaskChart.jsx
dashboard/src/pages/: Index.tsx
examples/: huggingface_example.py  langchain_example.py  pytorch_example.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CTASection.tsx  CodeSection.tsx  DashboardLayout.tsx  HeroSection.tsx  Navbar.tsx  PricingSection.tsx  (+2 more)
infra/nginx/: nginx.conf
infra/scripts/: seed_demo.py
neurosleepnet/: __init__.py
neurosleepnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neurosleepnet/core/: attention.py  buffer.py  layer.py  retrieval.py
neurosleepnet/legacy/: buffer.py  graph.py  residual.py  retrieval.py  sleep.py
notebooks/: NeuroSleepNet_Demo.ipynb
sdk/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/neurosleepnet/: client.py
tests/validation/: validate_memory_v2.py
(+13 files in other folders)
