[project]
name = "neurosleepnet-backend"
version = "0.1.0"
description = "NeuroSleepNet — A Sleep-Inspired Hybrid Memory Layer for Continual AI Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "openai>=1.57.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "razorpay>=1.4.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]
