[project]
name = "neurosleepnet"
version = "0.1.0"
description = "NeuroSleepNet — A Sleep-Inspired Hybrid Memory Layer for Continual AI Learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
